2015-01-05 Jan Gehring <jan.gehring, gmail.com> (0.3.1)
  * fixed errata query if no updates available

2015-01-04 Jan Gehring <jan.gehring, gmail.com> (0.3.0)
  * added initial docker support (login, push, pull, search)
  * added file server for apt and yum
  * added errata database support

2015-01-02 Jan Gehring <jan.gehring, gmail.com> (0.2.0)
  * added possibility to sign repositories (apt and yum)
  * fixed centos mirror bug (CentOS 7 - efidisk.img not existing) - #4

2014-03-18 Jan Gehring <jan.gehring, gmail.com> (0.1.0)
  * added apt repository management