@@ -57,5 +57,5 @@
          "url" : "https://github.com/krimdomu/repositorio"
       }
    },
-   "version" : "v0.3.1"
+   "version" : "v0.3.2"
 }
